# agent-framework-aspire

./: .gitignore  NuGet.config  README.md  agent-framework-aspire.sln  agent-framework-aspire.slnx
.aspire/: settings.json
.github/agents/: maf-dotnet-agent-instructions.md
src/agents-dotnet/: Agents.Dotnet.csproj  Program.cs
src/agents-python/: .env  README.md  pyproject.toml  test_a2a.py
src/agents-python/agents_python/: __init__.py  a2a_agent.py  a2a_models.py  agent_executor.py  financial_models.py  main.py  models.py
src/agents-python/services/: __init__.py  financial_service.py
src/agents-python/tools/: __init__.py  financial_processing_tools.py  financial_tools.py
src/apphost/: AppHost.cs  AppHost.csproj  appsettings.json
src/apphost-singlefile/: apphost.cs  apphost.run.json
src/aspire/: apphost.cs  apphost.run.json
src/custom-workflow-python/: .env  A2A_INTEGRATION.md  CONFIGURATION_SUMMARY.md  README.md  custom-workflow-description.md  pyproject.toml
src/frontend/: .gitignore  package-lock.json  vite.config.ts
src/groupchat-dotnet/: GroupChat.Dotnet.csproj  HostClientAgent.cs  NuGet.config  Program.cs
src/mcp-server-dotnet/: McpServer.Dotnet.csproj  NuGet.config  Program.cs  appsettings.json
src/service-defaults/: Extensions.cs  ServiceDefaults.csproj
src/shared-models/: AIChatCompletionDelta.cs  AIChatFile.cs  AIChatMessage.cs  AIChatMessageDelta.cs  AIChatRequest.cs  AIChatRole.cs  JsonCamelCaseEnumConverter.cs
src/shared-services/: CosmosAgentSessionStore.cs  CosmosAgentThreadStore.cs  CosmosChatHistoryProvider.cs  (+4 more)
(+65 files in other folders)
